Fix issue with login and small layout issues

--- a/scss/pages/profile.scss
+++ b/scss/pages/profile.scss
@@ -10,8 +10,13 @@ body.pagelayout-mypublic {
     }
 
     .profile-contact {
-        .contentnode dl {
-            display: flex;
+        .contentnode {
+            dl {
+                display: flex;
+            }
+            dd {
+                margin-left: 1em;
+            }
         }
     }
 
@@ -86,5 +91,8 @@ body.pagelayout-mypublic {
 
     .card-course {
         min-width: 25%;
+        a.course-image {
+            background-size: cover;
+        }
     }
 }
